--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tmux/catppuccin"]
 	path = tmux/catppuccin
 	url = https://github.com/catppuccin/tmux.git
+[submodule "kitty/catppuccin"]
+	path = kitty/catppuccin
+	url = https://github.com/catppuccin/kitty.git
