--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "btop/catppuccin"]
 	path = btop/catppuccin
 	url = https://github.com/catppuccin/btop.git
+[submodule "bat/catppuccin"]
+	path = bat/catppuccin
+	url = https://github.com/catppuccin/bat.git
