feat: added pyprland

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -12,8 +12,7 @@ bind = $mainMod, P, pseudo, # dwindle
 
 # FEATURES / EXTRAS 
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
-
-# TODO
-# bind = $mainMod, Z, exec, pypr zoom # Toggle Zoom
-# bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
+bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
+bind = $mainMod, Z, exec, pypr zoom
+bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5
 
