feat: added swww for wallpapers

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -4,3 +4,7 @@
 
 exec-once = eww open bar &
 exec-once = pypr &
+exec-once = swww-daemon &
+
+# Set Wallpaper
+exec-once = swww img -t outer --transition-step 150 --transition-fps 150 ~/Pictures/wallpapers/catppuccin/misc/cat_pacman.png
