--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "hypr/catppuccin"]
 	path = hypr/catppuccin
 	url = https://github.com/catppuccin/hyprland
+[submodule "wallpapers/catppuccin"]
+	path = wallpapers/catppuccin
+	url = https://github.com/zhichaoh/catppuccin-wallpapers
