feat: added rofi

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -15,4 +15,5 @@ bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opac
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom
 bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5
+bind = $mainMod, R, exec, rofi -show
 
