--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -15,5 +15,4 @@ bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opac
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom
 bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5
-bind = $mainMod, R, exec, rofi -show
-
+bind = $mainMod, R, exec, rofi -config ~/.config/rofi/styles/style_01.rasi -show 
