--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -11,8 +11,11 @@ bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # FEATURES / EXTRAS 
+bind = $mainMod, R, exec, rofi -config ~/.config/rofi/styles/style_01.rasi -show 
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
+bind = $mainMod, L, exec, hyprlock
+
+# pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom
 bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5
-bind = $mainMod, R, exec, rofi -config ~/.config/rofi/styles/style_01.rasi -show 
