feat: added partial implementation for the wallpaper picker

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -13,7 +13,7 @@ bind = $mainMod, P, pseudo, # dwindle
 # FEATURES / EXTRAS 
 bind = $mainMod, R, exec, rofi -config ~/.config/rofi/styles/style_01.rasi -show 
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod ALT, L, exec, hyprlock
 
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
