--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -24,3 +24,9 @@ windowrulev2 = pin,title:^(Picture-in-Picture)$
 
 # windowrule v2 - extras
 windowrulev2 = keepaspectratio, title:^(Picture-in-Picture)$
+
+# Ignore maximize requests from apps. You'll probably like this.
+windowrulev2 = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
