--- a/hypr/configs/look.conf
+++ b/hypr/configs/look.conf
@@ -35,7 +35,7 @@ decoration {
     dim_special = 0.8
 
     shadow {
-        enabled = true
+        enabled = false
         range = 6
         render_power = 1
         color = rgba($crustAlphaee)
