fix: fixed wallpaper picker toggle

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -14,8 +14,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, R, exec, rofi -config ~/.config/rofi/styles/style_01.rasi -show 
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
 bind = $mainMod ALT, L, exec, hyprlock
-bind = $mainMod, W, exec, eww open wallpaper-selector-closer --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
-bind = $mainMod, W, exec, eww open wallpaper-selector --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
+bind = $mainMod, W, exec, eww open --toggle wallpaper-selector-closer --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
+bind = $mainMod, W, exec, eww open --toggle wallpaper-selector --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
 
 
 # pyprland
