feat: sync rofi wallpaper with monitor wallpaper + added SUPER+R toggle

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -11,7 +11,7 @@ bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # FEATURES / EXTRAS 
-bind = $mainMod, R, exec, rofi -config ~/.config/rofi/styles/style_01.rasi -show 
+bind = $mainMod, R, exec, ~/.config/hypr/scripts/open-rofi.sh
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
 bind = $mainMod ALT, L, exec, hyprlock
 bind = $mainMod, W, exec, eww open --toggle wallpaper-selector-closer --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
