--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -16,7 +16,7 @@ bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opac
 bind = $mainMod ALT, L, exec, hyprlock
 bind = $mainMod, W, exec, eww open --toggle wallpaper-selector-closer --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
 bind = $mainMod, W, exec, eww open --toggle wallpaper-selector --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
-
+bind = $mainMod ALT, P, exec, wlogout -b 6 -s
 
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
