feat: added basic swaync config

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -11,14 +11,17 @@ bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # FEATURES / EXTRAS 
-bind = $mainMod, R, exec, ~/.config/hypr/scripts/open-rofi.sh
-bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle #disable opacity to active window
-bind = $mainMod ALT, L, exec, hyprlock
+bind = $mainMod, R, exec, ~/.config/hypr/scripts/open-rofi.sh # application launcher
+bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle # disable opacity to active window
+bind = $mainMod ALT, L, exec, hyprlock # lockscreen
+bind = $mainMod ALT, P, exec, wlogout -b 6 -s  # power menue
+bind = $mainMod, N, exec, swaync-client -t -sw # notification menue
+
+# wallpaper-selector
 bind = $mainMod, W, exec, eww open --toggle wallpaper-selector-closer --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
 bind = $mainMod, W, exec, eww open --toggle wallpaper-selector --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
-bind = $mainMod ALT, P, exec, wlogout -b 6 -s
 
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
-bind = $mainMod, Z, exec, pypr zoom
-bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5
+bind = $mainMod, Z, exec, pypr zoom  # zoom
+bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5 # increase zoom
