--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -5,4 +5,5 @@
 exec-once = swww-daemon &
 exec-once = eww open bar &
 exec-once = pypr &
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+exec-once = swaync &
