--- a/hypr/configs/monitors.conf
+++ b/hypr/configs/monitors.conf
@@ -2,6 +2,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 monitor=eDP-1, highrr,0x750,1 # Laptop
-monitor=HDMI-A-1,preferred,auto-right,1 # External monitor 1
+monitor=HDMI-A-1,highrr,auto-right,1 # External monitor 1
 monitor=,preferred,auto-left,1 # Other external monitors
 
