feat: added hyprexpo plugin

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -7,3 +7,4 @@ exec-once = eww open bar &
 exec-once = pypr &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = swaync &
+exec-once = hyprpm reload -nn &
