--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -25,3 +25,6 @@ bind = $mainMod, W, exec, eww open --toggle wallpaper-selector --screen $(hyprct
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom  # zoom
 bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5 # increase zoom
+
+# plugins
+bind = SUPER, A , hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
