--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,6 +34,8 @@ source = ./configs/other.conf
 # INPUT
 source = ./configs/input.conf
 
+# PLUGINS
+source = ./configs/plugins.conf
 
 # KEYBINDINGS
 source = ./configs/general-keybindings.conf
