--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -1,6 +1,7 @@
 # WINDOW-RULES
 # https://wiki.hyprland.org/Configuring/Window-Rules/
 
+
 # windowrule v2 - position
 # windowrulev2 = center,floating:1 # warning, it cause even the menu to float and center.
 windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
@@ -13,8 +14,10 @@ windowrulev2 = idleinhibit fullscreen, fullscreen:1
 # windowrule v2 - float
 windowrulev2 = float, title:^(Picture-in-Picture)$
 
-# windowrule v2 - opacity #enable as desired
-windowrulev2 = opacity 0.9 0.8, class:^(Alacritty|kitty|kitty-dropterm)$ # Terminals
+# windowrule v2 - opacity 
+# windowrulev2 = opacity 0.9 0.8, class:^(Alacritty|kitty|kitty-dropterm)$ # Terminals
+windowrulev2 = plugin:chromakey,fullscreen:0
+chromakey_background = 7,8,17
 
 # windowrule v2 - size
 windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
