feat: added Hyprspace plugin

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -27,5 +27,6 @@ bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom  # zoom
 bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5 # increase zoom
 
-# plugins
-bind = SUPER, A , hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+# PLUGINS
+bind = SUPER, A , overview:toggle # workspace overview similar to that of KDE Plasma, GNOME
+bind = SUPER SHIFT, A , hyprexpo:expo, toggle # grid style overview of workspaces
