--- a/hypr/configs/plugins.conf
+++ b/hypr/configs/plugins.conf
@@ -10,5 +10,10 @@ plugin {
         gesture_distance = 300 # how far is the "max"
         gesture_positive = false # positive = swipe down. Negative = swipe up.
     }
+    overview {
+        affectStrut = false # whether the panel should push window aside
+        drawActiveWorkspace = true # draw the active workspace in overview as-is
+        autoDrag = false # mouse click always drags window when overview is open
+        disableGestures = true
+    }
 }
-
