chore: updated nvim dependencies, small UI improvement for hyprland overview plugin

--- a/hypr/configs/plugins.conf
+++ b/hypr/configs/plugins.conf
@@ -14,6 +14,10 @@ plugin {
         affectStrut = false # whether the panel should push window aside
         drawActiveWorkspace = true # draw the active workspace in overview as-is
         autoDrag = false # mouse click always drags window when overview is open
+
         disableGestures = true
+
+        workspaceActiveBorder = $mauve
+        workspaceInactiveBorder = $overlay0
     }
 }
