fix: fixed a bug where an error appears on startup when plugins have not been loaded yet

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -13,7 +13,6 @@ bind = $mainMod, P, pseudo, # dwindle
 # FEATURES / EXTRAS 
 bind = $mainMod, R, exec, ~/.config/hypr/scripts/open-rofi.sh # application launcher
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle # toggle opacity to active window
-bind = $mainMod ALT, O, togglechromakey # toggle chromakey effect on active window
 bind = $mainMod ALT, L, exec, hyprlock # lockscreen
 bind = $mainMod ALT, P, exec, wlogout -b 6 -s  # power menue
 bind = $mainMod, N, exec, swaync-client -t -sw # notification menue
@@ -28,5 +27,11 @@ bind = $mainMod, Z, exec, pypr zoom  # zoom
 bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5 # increase zoom
 
 # PLUGINS
+# The config will generate an error shortly after boot as the plugins have to be loaded first. 
+# These errors are SUPPRESSED!
+
+# hyprlang noerror true
 bind = SUPER, A , overview:toggle # workspace overview similar to that of KDE Plasma, GNOME
 bind = SUPER SHIFT, A , hyprexpo:expo, toggle # grid style overview of workspaces
+bind = $mainMod ALT, O, togglechromakey # toggle chromakey effect on active window
+# hyprlang noerror false
