--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -16,8 +16,6 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 
 # windowrule v2 - opacity 
 # windowrulev2 = opacity 0.9 0.8, class:^(Alacritty|kitty|kitty-dropterm)$ # Terminals
-windowrulev2 = plugin:chromakey,fullscreen:0
-chromakey_background = 7,8,17
 
 # windowrule v2 - size
 windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
@@ -33,3 +31,11 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# PLUGINS
+# This config will generate an error shortly after boot as the plugins have to be loaded first. 
+# These errors are SUPPRESSED!
+# hyprlang noerror true
+windowrulev2 = plugin:chromakey,fullscreen:0
+chromakey_background = 7,8,17
+# hyprlang noerror false
