--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -18,8 +18,8 @@ bind = $mainMod ALT, P, exec, wlogout -b 6 -s  # power menue
 bind = $mainMod, N, exec, swaync-client -t -sw # notification menue
 
 # wallpaper-selector
-bind = $mainMod, W, exec, eww open --toggle wallpaper-selector-closer --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
-bind = $mainMod, W, exec, eww open --toggle wallpaper-selector --screen $(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
+bind = $mainMod, W, exec, eww open --toggle wallpaper-selector-closer --screen $active_monitor_name
+bind = $mainMod, W, exec, eww open --toggle wallpaper-selector --screen $active_monitor_name
 
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
@@ -35,3 +35,17 @@ bind = SUPER, A , overview:toggle # workspace overview similar to that of KDE Pl
 bind = SUPER SHIFT, A , hyprexpo:expo, toggle # grid style overview of workspaces
 bind = $mainMod ALT, O, togglechromakey # toggle chromakey effect on active window
 # hyprlang noerror false
+
+
+# SCREENSHOTS
+# Area selection
+bind = $mainMod, S, exec, grimblast copysave area ~/Pictures/Screenshots/screenshot_$(date "+%Y-%m-%d-%H-%M-%S").png
+
+# Currently ative window
+bind = $mainMod SHIFT, S, exec, grimblast copysave active ~/Pictures/Screenshots/screenshot_$(date "+%Y-%m-%d-%H-%M-%S").png
+
+# Full screen (current monitor)
+ bind = $mainMod ALT, S, exec, grimblast copysave output~/Pictures/Screenshots/screenshot_$(date "+%Y-%m-%d-%H-%M-%S").png
+
+# Full screen (all monitors)
+# bind = SUPER SHIFT, S, exec, grimblast copysave screen ~/Pictures/Screenshots/screenshot_$(date "+%Y-%m-%d-%H-%M-%S").png
