--- a/hypr/configs/programs.conf
+++ b/hypr/configs/programs.conf
@@ -2,3 +2,5 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 $terminal = kitty
+$editor = nvim
+$active_monitor_name=$(hyprctl -j monitors | jq -r '.[] | select(.focused == true).name')
