--- a/hypr/configs/keybindings-workspace-windows.conf
+++ b/hypr/configs/keybindings-workspace-windows.conf
@@ -74,9 +74,9 @@ bind = $mainMod SHIFT, tab, workspace, m-1
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# Special workspace (scratchpad)
+bind = $mainMod, D, togglespecialworkspace, magic
+bind = $mainMod SHIFT, D, movetoworkspace, special:magic
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
