feat: added thunar and nextcloud-client

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -8,3 +8,10 @@ exec-once = pypr &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = swaync &
 exec-once = hyprpm reload -nn &
+
+
+# Personal applications.
+# These can be removed if not used.
+# hyprlang noerror true
+exec-once = nextcloud &
+# hyprlang noerror false
