fix: statusbar + nextcloud systray race condition on boot

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -3,7 +3,7 @@
 # Or execute your favorite apps at launch like this:#
 
 exec-once = swww-daemon &
-exec-once = eww open bar &
+exec-once = sleep 2 && eww open bar &
 exec-once = pypr &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = swaync &
@@ -13,5 +13,5 @@ exec-once = hyprpm reload -nn &
 # Personal applications.
 # These can be removed if not used.
 # hyprlang noerror true
-exec-once = nextcloud &
+exec-once = sleep 2 && nextcloud &
 # hyprlang noerror false
