feat: [#7] reopen eww status bar when a monitor is added/removed

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -3,12 +3,13 @@
 # Or execute your favorite apps at launch like this:#
 
 exec-once = swww-daemon &
-exec-once = sleep 2 && eww open bar &
 exec-once = pypr &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = swaync &
 exec-once = hyprpm reload -nn &
 
+# reopen eww status bar when a monitor is added/removed
+exec-once = socat -u UNIX-CONNECT:$XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/.socket2.sock EXEC:"shellevents $HOME/.config/hypr/scripts/shellevents.sh",nofork 
 
 # Personal applications.
 # These can be removed if not used.
