--- a/hypr/configs/env.conf
+++ b/hypr/configs/env.conf
@@ -5,3 +5,9 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = EDITOR,nvim
 env = BAT_THEME,dotfiles
+
+# QT variables
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_QPA_PLATFORM,wayland;xcb 
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt6ct 
