--- a/hypr/configs/input.conf
+++ b/hypr/configs/input.conf
@@ -4,7 +4,7 @@ input {
     kb_layout = us,at
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
