--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -3,6 +3,7 @@
 # Or execute your favorite apps at launch like this:#
 
 exec-once = swww-daemon &
+exec-once = eww open bar &
 exec-once = pypr &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = swaync &
