--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -31,8 +31,8 @@ bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5 # increase zoom
 # These errors are SUPPRESSED!
 
 # hyprlang noerror true
-bind = SUPER, A , overview:toggle # workspace overview similar to that of KDE Plasma, GNOME
-bind = SUPER SHIFT, A , hyprexpo:expo, toggle # grid style overview of workspaces
+bind = $mainMod, A , overview:toggle # workspace overview similar to that of KDE Plasma, GNOME
+bind = $mainMod SHIFT, B , hyprexpo:expo, toggle # grid style overview of workspaces
 bind = $mainMod ALT, O, togglechromakey # toggle chromakey effect on active window
 # hyprlang noerror false
 
