--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -7,7 +7,7 @@ exec-once = eww open bar &
 exec-once = pypr &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = swaync &
-exec-once = hyprpm reload -nn &
+exec-once = hyprpm update && hyprpm reload -nn &
 
 # reopen eww status bar when a monitor is added/removed
 exec-once = socat -u UNIX-CONNECT:$XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/.socket2.sock EXEC:"shellevents $HOME/.config/hypr/scripts/shellevents.sh",nofork 
