fix: make eww monitor handling more universal + updated hypr monitor settings

--- a/hypr/configs/workspace-rules.conf
+++ b/hypr/configs/workspace-rules.conf
@@ -5,4 +5,4 @@
 
 # Assigning workspace to a certain monitor
 workspace = 1, monitor:eDP-1
-workspace = 2, monitor:HDMI-A-1
+workspace = 2, monitor:desc:ASUSTek COMPUTER INC VG27AQ1A LBLMQS008039, default:true
