feat: added some power related scripts

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -32,7 +32,7 @@ bind = $mainMod SHIFT, Z, exec, pypr zoom ++0.5 # increase zoom
 
 # hyprlang noerror true
 bind = $mainMod, A , overview:toggle # workspace overview similar to that of KDE Plasma, GNOME
-bind = $mainMod SHIFT, B , hyprexpo:expo, toggle # grid style overview of workspaces
+bind = $mainMod SHIFT, A , hyprexpo:expo, toggle # grid style overview of workspaces
 bind = $mainMod ALT, O, togglechromakey # toggle chromakey effect on active window
 # hyprlang noerror false
 
