--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,8 @@ setw -g mode-keys vi
 # Options to make tmux more pleasant
 set -g mouse on
 set -g default-terminal "tmux-256color"
+set-option -g allow-rename on
+set-option -g automatic-rename on
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -23,6 +25,8 @@ set -g @plugin 'Morantron/tmux-fingers'
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
 
 # Load catppuccin
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
