feat: now all applications use NVIDIA GPU in NVIDIA optimus mode (major performance increase)

--- a/hypr/configs/monitors.conf
+++ b/hypr/configs/monitors.conf
@@ -2,6 +2,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 monitor=eDP-1, highrr,0x750,1 # Laptop
-#monitor=HDMI-A-3,highrr,auto-right,1 # External monitor 1
-monitor=desc:ASUSTek COMPUTER INC VG27AQ1A LBLMQS008039,highrr,auto-right,1 # External monitor 1
+monitor=desc:ASUSTek COMPUTER INC VG27AQ1A LBLMQS008039,highrr,auto-right,1 # special setup for personal monitor
 monitor=,preffered,auto-right,1 # External monitor 1
+# monitor=,preffered,auto-right,1,mirror,eDP-1 # Mirror the inbuilt monitor
