feat: improved the systray + some other small changes

--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -19,6 +19,7 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 
 # windowrule v2 - size
 windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
+windowrulev2 = size 25% 50%, class:protonvpn-app
 
 # windowrule v2 - pinning
 windowrulev2 = pin,title:^(Picture-in-Picture)$
