feat: improved the systray UI

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -2,6 +2,7 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:#
 
+exec-once = nm-applet &
 exec-once = swww-daemon &
 exec-once = eww open bar &
 exec-once = pypr &
