feat: added spicetify + marketplace to personal applications

--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -5,6 +5,7 @@
 # windowrule v2 - position
 # windowrulev2 = center,floating:1 # warning, it cause even the menu to float and center.
 windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
+windowrulev2 = center,title:^(Visual Studio Code)$ 
 
 # windowrule v2 to avoid idle for fullscreen apps
 windowrulev2 = idleinhibit fullscreen, class:^(*)$
