feat: added gamemode toggle

--- a/hypr/configs/general-keybindings.conf
+++ b/hypr/configs/general-keybindings.conf
@@ -13,6 +13,7 @@ bind = $mainMod, P, pseudo, # dwindle
 # FEATURES / EXTRAS 
 bind = $mainMod, R, exec, ~/.config/hypr/scripts/open-rofi.sh # application launcher
 bind = $mainMod ALT, O, exec, hyprctl setprop active opaque toggle # toggle opacity to active window
+bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamemode.sh # toggle game mode
 bind = $mainMod ALT, L, exec, hyprlock # lockscreen
 bind = $mainMod ALT, P, exec, wlogout -b 6 -s  # power menue
 bind = $mainMod, N, exec, swaync-client -t -sw # notification menue
