--- a/hypr/configs/input.conf
+++ b/hypr/configs/input.conf
@@ -32,11 +32,14 @@ gestures {
   workspace_swipe_cancel_ratio = 0.5
   workspace_swipe_create_new = true 
   workspace_swipe_forever = true
-  #workspace_swipe_use_r = true #uncomment if wanted a forever create a new workspace with swipe right
 }
 
 binds {
   workspace_back_and_forth = true
   allow_workspace_cycles = true
   pass_mouse_when_bound = false
+}
+
+cursor {
+  no_hardware_cursors = 1
 }
