chore: updated dependencies and some window rules

--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -6,6 +6,8 @@
 # windowrulev2 = center,floating:1 # warning, it cause even the menu to float and center.
 windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$ 
 windowrulev2 = center,title:^(Visual Studio Code)$ 
+windowrulev2 = center,title:^(Save File)$ 
+windowrulev2 = center,title:^(GeoGebra)$ 
 
 # windowrule v2 to avoid idle for fullscreen apps
 windowrulev2 = idleinhibit fullscreen, class:^(*)$
@@ -21,6 +23,7 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 # windowrule v2 - size
 windowrulev2 = size 25% 25%, title:^(Picture-in-Picture)$
 windowrulev2 = size 25% 50%, class:protonvpn-app
+windowrulev2 = size 50% 50%,title:^(Image Information — Gwenview)$ 
 
 # windowrule v2 - pinning
 windowrulev2 = pin,title:^(Picture-in-Picture)$
