chore: updated dependencies

--- a/qt/qt6ct/qt6ct.conf
+++ b/qt/qt6ct/qt6ct.conf
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\n\x2\0\0\x1\xf2\0\0\a\x80\0\0\0\0\0\0\n\x2\0\0\x1\xf2\0\0\0\x1\x2\0\0\0\n\0\0\0\a\x80\0\0\0\0\0\0\n\x2\0\0\x1\xf2)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\x11S\0\0\x5P\0\0\a\x80\0\0\0\0\0\0\x11\x7f\0\0\x5\x9f\0\0\0\x1\x2\0\0\0\n\0\0\0\a\x80\0\0\0\0\0\0\x11S\0\0\x5P)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\fb\0\0\x5P\0\0\a\x80\0\0\0\0\0\0\fb\0\0\x5P\0\0\0\x1\x2\0\0\0\n\0\0\0\a\x80\0\0\0\0\0\0\fb\0\0\x5P)
 
 [Troubleshooting]
 force_raster_widgets=1
