feat: added some dependecies and minor improvements

--- a/hypr/configs/window-rules.conf
+++ b/hypr/configs/window-rules.conf
@@ -8,6 +8,7 @@ windowrulev2 = move 72% 7%,title:^(Picture-in-Picture)$
 windowrulev2 = center,title:^(Visual Studio Code)$ 
 windowrulev2 = center,title:^(Save File)$ 
 windowrulev2 = center,title:^(GeoGebra)$ 
+windowrulev2 = center,class:^(Code)$ 
 
 # windowrule v2 to avoid idle for fullscreen apps
 windowrulev2 = idleinhibit fullscreen, class:^(*)$
